manifests/fluent-bit-2.3.3.tgz-manifest.yaml
---
# Source: fluent-bit/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-fluent-bit
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 3.0.7
    helm.sh/chart: fluent-bit-2.3.3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: fluent-bit
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 2020
---
# Source: fluent-bit/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  my-release-fluent-bit
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 3.0.7
    helm.sh/chart: fluent-bit-2.3.3
    app.kubernetes.io/part-of: fluent-bit
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 2020
      targetPort: 2020
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/part-of: fluent-bit
---
# Source: fluent-bit/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  my-release-fluent-bit
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 3.0.7
    helm.sh/chart: fluent-bit-2.3.3
    app.kubernetes.io/part-of: fluent-bit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: fluent-bit
  replicas: 1
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: fluent-bit
        app.kubernetes.io/version: 3.0.7
        helm.sh/chart: fluent-bit-2.3.3
        app.kubernetes.io/part-of: fluent-bit
      annotations:
        checksum/config: 8225af291f349baed20293d5fc226375ed74c85fc422a6e90cd1a418d1e8499e
    spec:
      
      priorityClassName: ""
      serviceAccountName: my-release-fluent-bit
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: fluent-bit
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      automountServiceAccountToken: true
      containers:
        - name: fluent-bit
          image: docker.io/bitnami/fluent-bit:3.0.7-debian-12-r1
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 2020
          startupProbe:
            failureThreshold: 15
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              port: http
              path: /api/v1/health
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 15
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              port: http
              path: /api/v1/health
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /opt/bitnami/fluent-bit/conf/fluent-bit.conf
              subPath: fluent-bit.conf
            - name: config
              mountPath: /opt/bitnami/fluent-bit/conf/custom_parsers.conf
              subPath: custom_parsers.conf
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: config
          configMap:
            name: my-release-fluent-bit-config
